- added padding: 0 to main-layouts.scss to fix alignment

--- a/src/app/layouts/main-layout/main-layout.scss
+++ b/src/app/layouts/main-layout/main-layout.scss
@@ -46,5 +46,6 @@ app-nav-bar {
 
     .content {
         min-height: calc(100dvh - $header_height_desktop);
+        padding: 0;
     }
 }
